--- a/indexGB.html
+++ b/indexGB.html
@@ -76,8 +76,7 @@
             Content of the article: With these lyrics, the artist shows us that the world is obnibulated 
             by money and consumption. Perhaps we can even talk about mass consumption. 
         </p> 
-            <a href="./music.html">Learn more</a>
-            <button>Learn more</button>
+            <a href="./music.html"><button>Learn more</button></a>
 
 
     <h2>The book for the environment</h2>   
@@ -87,8 +86,7 @@
             Content of the article: We will see what APPA tells us about air pollution. But as the book dates from 
             1998, we will see the trends from that time and compare them with the current trends.
         </p> 
-            <a href="./book.html">Learn more</a>
-            <button>Learn more</button>
+            <a href="./book.html"><button>Learn more</button></a>
 
 
     <h2>The Series that sums it all up</h2>   
@@ -98,8 +96,7 @@
             Content of the article: We'll see what Oda is up to in his work. He makes a lot of hidden allusions 
             which makes his style intriguing and interesting.
         </p> 
-            <a href="./series.html">Learn more</a>
-            <button>Learn more</button>
+        <a href="./series.html"><button>Learn more</button></a>
 
 
     <h2>Most unequal place in the world</h2>   
@@ -109,8 +106,7 @@
         Content of the article: We will see why we chose this place. South Africa is the most insecure country 
         in the world.
     </p>
-        <a href="./place.html">Learn more</a>
-        <button>Learn more</button>
+        <a href="./place.html"><button>Learn more</button></a>
 
 
     <h2>A great hope for the world</h2>
@@ -121,8 +117,7 @@
         Content of the article: We are going to enumerate a lot of systems to help the poor. In particular with the 
         associations or even the kitty.
     </p>
-        <a href="./hopes.html">Learn more</a>
-        <button>Learn more</button>
+        <a href="./hopes.html"></a><button>Learn more</button></a>
 
 
     <h2>A regret of this generation</h2>
@@ -133,8 +128,7 @@
         Content of the article: We will list a lot of inequalities in the world. With the poor access to water and 
         food in the world.
     </p>
-        <a href="./regrets.html">Learn more</a>
-        <button>Learn more</button>
+        <a href="./regrets.html"></a><button>Learn more</button></a>
 
 
     <footer>
