--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li><a href="./page_regret.html">Un Regret de cette génération</a></li>
                 <li><a href="./autres_projets.html">Autres Projets</a></li>
             </ul>
+            <div class="trait_séparation_menu"><hr></div>
             <div class="text-align_menu">
             <ul>
                 <a href="./glossaire.html">Glossaire</a>
