center-btn-en-savoir-plus

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <p>25200 Montbéliard</p>      
         <h4>Suivre l'IUT MMI</h4>
         <div class="icon">
-            <div class="icon_facebook"><a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="/" alt="logo facebook"></a></div>
+            <div class="icon_facebook"><a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="/public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="logo facebook"></a></div>
             <div class="icon_twitter"><a href="https://twitter.com/mmimontbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="logo twitter"></a></div>
             <div class="icon_instagram"><a href="https://www.instagram.com/mmi_montbeliard/?hl=fr"><img src="public/icon/tinify-2022-11-16T10_17_52/instagram 1.webp" alt="logo instagram"></a></div>     
             <div class="icon_youtube"><a href="https://www.youtube.com/channel/UCgW7jR8McJwjxPh0fDQaXGg/videos?app=desktop"><img src="public/icon/tinify-2022-11-16T10_17_52/youtube 1.webp" alt="logo youtube"></a></div>     
