--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
     
             <button class="icon_cross_menu" @click="menuIsOpen = ! menuIsOpen">
-                <img src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="Icone croix pour quitter le menu">
+                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="Icone croix pour quitter le menu">
             </button>
             <h2>Menu</h2>
             <ul>
