--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul>
                 <a href="./glossaire.html">Glossaire</a>
                 <a href="./à_propos.html">À propos</a>
-                <a href="#">Contact</a>
+                <a href="./page_contact.html">Contact</a>
             </ul>
             </div>
             <ul>
