--- a/indexGB.html
+++ b/indexGB.html
@@ -55,7 +55,7 @@
             <ul> 
                 <li><a href="./glossary.html">Glossary</a></li>
                 <li><a href="./about_me.html">About me</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact-me.html">Contact</a></li>
             </ul> 
             <ul>
                 <li><a href="./index.html"><img src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="#"></a></li>
