--- a/page_contact.html
+++ b/page_contact.html
@@ -104,7 +104,7 @@
                     </div>
                     <br>
                     <div class="col-xs-12">
-                        <div class="btn-lrg submit-btn">Send Message</div>
+                        <div class="btn-lrg submit-btn">Envoyer le ici</div>
                     </div>
             </div>
             <br>
