footer all page fr

--- a/page_musique.html
+++ b/page_musique.html
@@ -149,7 +149,8 @@
     <p>Image d'une scène du clip Sky de Hakai</p>
 
     <h3>Écouter la musique</h3>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="#">
+
+    <a href="https://www.youtube.com/watch?v=ymkgg-b5Dq4"><img src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="#"></a>
 
     <h3>Ce qu’il resort de la musique</h3>
     <p>
@@ -203,29 +204,35 @@
     </p>
 
     <footer>
-        <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
-        <h3>Site créé par Sofiane Mouadeb en classe de MMI Montbéliard</h3>
+        <div class="logo__texte_ms">
+            <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
+            <h3 class="created_by_footer">Site créé par Sofiane Mouadeb en classe de MMI Montbéliard</h3>
+        </div>
         <h2>Menu</h2>
         <p>Mention légale</p>
         <p>Contact</p>    
         <p>Contact</p> 
         <p>4 Place Tharradin</p>
-        <p>25200 Montbéliard</p>    
-            
+        <p>25200 Montbéliard</p>      
         <h4>Suivre l'IUT MMI</h4>
-        <a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="#"></a>
-        <a href="https://twitter.com/mmimontbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="#"></a>
-        <a href="https://www.instagram.com/mmi_montbeliard/?hl=fr"><img src="public/icon/tinify-2022-11-16T10_17_52/instagram 1.webp" alt="#"></a>
-        <a href="https://www.youtube.com/channel/UCgW7jR8McJwjxPh0fDQaXGg/videos?app=desktop"><img src="public/icon/tinify-2022-11-16T10_17_52/youtube 1.webp" alt="#"></a>
-        <a href="https://www.twitch.tv/unifiedchampions"><img src="public/icon/tinify-2022-11-16T10_17_52/twitch .webp" alt="#"></a>
-        <a href="https://www.tiktok.com/@mmi_montbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/tiktok.webp" alt="#"></a>
-        <p>Mon e-mail personnel :</p>
-        <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new" target="_blank">sofiane.mouadeb.70000@gmail.com</a> 
-        <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-        <a href="http://mmimontbeliard.com/" target="_blank">dépatement MMI de Montbéliard</a></p>
-        <p>Université Nord Franche-Comté</p>
-        <a href="http://mmimontbeliard.com/" target="_blank">IUT MMI Montbéliard</a></p>
-        <img src="public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="#">
+        <div class="icon">
+            <div class="icon_facebook"><a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="/public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="logo facebook"></a></div>
+            <div class="icon_twitter"><a href="https://twitter.com/mmimontbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="logo twitter"></a></div>
+            <div class="icon_instagram"><a href="https://www.instagram.com/mmi_montbeliard/?hl=fr"><img src="public/icon/tinify-2022-11-16T10_17_52/instagram 1.webp" alt="logo instagram"></a></div>     
+            <div class="icon_youtube"><a href="https://www.youtube.com/channel/UCgW7jR8McJwjxPh0fDQaXGg/videos?app=desktop"><img src="public/icon/tinify-2022-11-16T10_17_52/youtube 1.webp" alt="logo youtube"></a></div>     
+            <div class="icon_twitch"><a href="https://www.twitch.tv/unifiedchampions"><img src="public/icon/tinify-2022-11-16T10_17_52/twitch .webp" alt="logo twitch"></a></div>
+            <div class="icon_tiktok"><a href="https://www.tiktok.com/@mmi_montbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/tiktok.webp" alt="logo facebook"></a></div>
+        </div>
+            <p>Mon e-mail personnel :</p>
+            <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new" style="color: #56A99F" target="_blank">
+                <p class="footer_link">
+                    sofiane.mouadeb.70000@gmail.com</a>
+                </p>
+            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Université Nord Franche-Comté</p>
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
+            <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
     </footer>
 </body>
 </html>
