--- a/page_contact.html
+++ b/page_contact.html
@@ -139,14 +139,14 @@
                 <div class="icon_tiktok"><a href="https://www.tiktok.com/@mmi_montbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/tiktok.webp" alt="logo facebook"></a></div>
             </div>
                 <p>Mon e-mail personnel :</p>
-                <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new" target="_blank">
-                    <p>
+                <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new" style="color: #56A99F" target="_blank">
+                    <p class="footer_link">
                         sofiane.mouadeb.70000@gmail.com</a>
                     </p>
                 <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-                <a href="http://mmimontbeliard.com/" target="_blank">dépatement MMI de Montbéliard</a></p>
+                <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
                 <p>Université Nord Franche-Comté</p>
-                <a href="http://mmimontbeliard.com/" target="_blank">IUT MMI Montbéliard</a></p>
+                <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
                 <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
         </footer>
     </body>
