ajustation de la police d'écriture

--- a/page_espoir.html
+++ b/page_espoir.html
@@ -97,7 +97,7 @@
         Tout cela à cause des menaces et pressions.
     </p>
     <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="#">
-    <p>
+    <p class="text-bottom-img">
         Photo de Coluche en noir et blanc avec le logo ”Les Restaurants du coeur”
         en bas à droite de l’image.
     </p>
@@ -113,7 +113,7 @@
         la création de son association mais cette association est devenu un monument en France. 
     </p>
     <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="#">
-    <p>Image du logo ”Les restaurants du coeur”.</p>
+    <p class="text-bottom-img">Image du logo ”Les restaurants du coeur”.</p>
     <h3>Les autres types d’aides ? </h3>
     <p>
         Il y a aussi les cagnottes qui sont des moyens pour aider des personnes en précarité.
