--- a/page_lieu.html
+++ b/page_lieu.html
@@ -121,7 +121,7 @@
         la population du pays.
     </p>
     <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="#">
-    <p>Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
+    <p class="text-bottom-img">Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
     <h3>En conclusion</h3>
     <p>
         On peut voir que la population est divisée en deux partie, d’un côté la population blanche et de 
