--- a/page_livre.html
+++ b/page_livre.html
@@ -99,7 +99,7 @@
         protège le vie sur la planète et sur les ultraviolets).
     </p>
     <img src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="#">
-    <p>Image explicative de l’atmosphère.</p>
+    <p class="text-bottom-img">Image explicative de l’atmosphère.</p>
     <h3>Les aspect de la pollution atmosphérique</h3>
     <p>
         La pollution atmosphérique vient de plusieurs aspects différents comme les phénomènes planétaires 
@@ -164,7 +164,7 @@
         comme les énergies solaire, éoliennes, hydraulique,… 
     </p>
     <img src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="#">
-    <p>Photo avec des éoliennes et des panneaux solaires.</p>
+    <p class="text-bottom-img">Photo avec des éoliennes et des panneaux solaires.</p>
     <h3>Voici un extrait du Livre :</h3>
     <p>
         Les retombées acides
