--- a/page_musique.html
+++ b/page_musique.html
@@ -146,7 +146,7 @@
         Business si t'appelles, parle business si t'appelles..
     </p>
     <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip sky.webp" alt="#">
-    <p>Image d'une scène du clip Sky de Hakai</p>
+    <p class="text-bottom-img">Image d'une scène du clip Sky de Hakai</p>
 
     <h3>Écouter la musique</h3>
 
@@ -168,7 +168,7 @@
         commence à travailler lorsqu’il sait le montant qu’il gagnera avant de s’y mettre.
     </p>
     <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai rouge et noir.webp" alt="#">
-    <p>Image de l'artiste Hakai dans avec une ambiance de rouge sombre et de noir.</p>
+    <p class="text-bottom-img">Image de l'artiste Hakai dans avec une ambiance de rouge sombre et de noir.</p>
     <p>    
         Il nous montre que la tendance ne fais que de changer et très rapidement. Elle peut changer du jour au lendemain.
         Un jour tu auras la gloire et du jour au lendemain tous peut s’effondrer.
@@ -196,13 +196,12 @@
         alimentairement ou même en se faisant plaisir en consommant c’est donc quasiment impossible de survivre si tu n’en a pas. 
     </p>
     <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip lune.webp" alt="#">
-    <p>Photo d'une scène du clip Lune de Hakai</p>
+    <p class="text-bottom-img">Photo d'une scène du clip Lune de Hakai</p>
 
     <p>
         Son dernier album ce nomme “Akuma”, il est un succès pour les auditeurs qui écoutent ce type de musiques qui sont 
         spéciales, elles se propagent et se développent de plus en plus.
     </p>
-
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
