--- a/page_regret.html
+++ b/page_regret.html
@@ -98,7 +98,7 @@
         1.7 millions d’enfants sont sous-alimentés gravement. 
     </p>
     <img src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="#">
-    <p>Image d’un enfant en sous alimentation, très maigre avec un visage plein de détresse et de fatigue.</p>
+    <p class="text-bottom-img">Image d’un enfant en sous alimentation, très maigre avec un visage plein de détresse et de fatigue.</p>
     <h3>La crise n’a rien arrangé</h3>
     <p>
         La crise du Covid 19 n’a fait qu’accroitre le nombre de personnes ayant un mauvais accès 
@@ -119,7 +119,7 @@
         En essayant de trouver des stratégie pour y parvenir. 
     </p>
     <img src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="#">
-    <p>Dessin qui représente la planète qui est un robinet ouvert et que l’eau de planète disparait peu à peu. </p>
+    <p class="text-bottom-img">Dessin qui représente la planète qui est un robinet ouvert et que l’eau de planète disparait peu à peu. </p>
 
 
     <footer>
