--- a/page_serie.html
+++ b/page_serie.html
@@ -80,8 +80,8 @@
         Nous allons voir ce que Oda insinu dans son oeuvre. Il fait pas mal d’allusions 
         cachés ce qui fait son style intrigant et intéressant de l’oeuvre.
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp" alt="#">
-    <p>Logo One Piece</p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp" class="opseries" alt="#">
+    <p class="text-bottom-img">Logo One Piece</p>
     <p>
         One Piece à été choisi car il y a pas accès au même ressources et aussi les problèmes 
         écologique à Wano. Il y a le racisme sur île des hommes poissons et sur l’île des Sabaody.
@@ -115,7 +115,7 @@
         l’alimentation et de l’eau. 
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="#">
-    <p>Image de pollution atmosphérique dans la série One Piece.</p>
+    <p class="text-bottom-img">Image de pollution atmosphérique dans la série One Piece.</p>
     <h3>La défense d’autres intérêts</h3>
     <p>
         Dans cette série, Oda défend beaucoup de chose. Il fait des allusions aux racismes avec les hommes 
@@ -125,29 +125,28 @@
         humain ne doit lever la main ou mal parler a un dragons célestes sinon il se fait tuer sur le champ. 
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="#">
-    <p>Image de différents homme poisson de la série One Piece.</p>
+    <p class="text-bottom-img">Image de différents homme poisson de la série One Piece.</p>
     <h3>En conclusion de cette article</h3>
     <p>
         On peut voir que Eiichirō Oda déteste pollution et il est pour l’écologie. Cela coïncide avec mon 
         livre sur la pollution. Oda est contre l’accès des répartitions de ressources alimentaires inégales. 
         Il y beaucoup de problèmes écologiques. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" alt="#">
-    <p>Logo de l’équipage principal de One Piece, nommé les chapeaux de paille.</p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" class="opchap" alt="#">
+    <p class="text-bottom-img">Logo de l’équipage principal de One Piece, nommé les chapeaux de paille.</p>
     <h3>Nous allons voir maintenant la filmographie de Eiichirō Oda</h3>
     <p>
         Eiichirō Oda, n’a fait que One Piece durant sa carrière qui continue car la série n’est pas achevée. 
         Il ne ressortira plus rien après One Piece, d’après lui car il consacre toute sa vie et cela fait 
         plus de 23 ans qu’il publie chaque semaine 1 épisode. Mais, il a publié des films les voici.
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="#">
     <p>Couverture des 4 films les plus vendu de Oda.</p>
     <h3>Regarder le premier épisode de One Piece</h3>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#">
-
+    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#"></a>
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
